[package]
authors = ["Walther Chen <walther.chen@gmail.com>"]
description = "wscat clone in rust"
homepage = "https://github.com/hwchen/manx-rs"
repository = "https://github.com/hwchen/manx-rs"
keywords = ["websocket", "wscat", "netcat", "cli"]
license = "MIT OR Apache-2.0"
edition = "2018"
name = "manx"
version = "0.4.0"


[[bin]]
name = "manx"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.38"
async-channel = "1.5.1"
async-executor = "1.4.0"
async-io = "1.3.1"
async-native-tls = "0.3.3"
async-tungstenite = "0.12.0"
blocking = "1.0.2"
clap = "2.33.3"
futures-lite = "1.11.3"
linefeed = "0.6.0"
native-tls = "0.2.7"
url = "2.2.0"

futures-sink = "0.3.11"
futures-util = "0.3.11"
